# wind-bias-correction

./: README.md  get_data.ipynb  locations_metadata.json  prediction.csv  pyproject.toml  requirements.txt
data/: .cache.sqlite
data/merged/: agartala.csv  bengaluru.csv  bikaner.csv  chennai.csv  jaisalmer.csv  leh.csv  lucknow.csv  mumbai.csv  new delhi.csv  shimla.csv
data/processed/: predictions.csv  predictions.pkl  test_features.pkl  test_target_x.pkl  test_target_y.pkl  train_target_x.pkl  train_target_y.pkl
data/raw/: agartala_actual.csv  agartala_forecast.csv  bengaluru_actual.csv  bengaluru_forecast.csv  bikaner_actual.csv  bikaner_forecast.csv  chennai_actual.csv  chennai_forecast.csv  jaisalmer_actual.csv  jaisalmer_forecast.csv  leh_actual.csv  leh_forecast.csv  lucknow_actual.csv  lucknow_forecast.csv  mumbai_actual.csv  mumbai_forecast.csv  new delhi_actual.csv  new delhi_forecast.csv  shimla_actual.csv  shimla_forecast.csv
models/: x_lgb_baseline.pkl  x_lgb_tuned.pkl  x_model.pkl  y_lgb_baseline.pkl  y_lgb_tuned.pkl  y_model.pkl
