[project]
name = "windy-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openmeteo-requests>=1.7.5",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
